k8s/prod/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emotion-frontend
  namespace: emotion-prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: emotion-frontend
  template:
    metadata:
      labels:
        app: emotion-frontend
    spec:
      containers:
        - name: emotion-frontend
          image: us-central1-docker.pkg.dev/emotion-detection-k8s/emotion-repo/emotion-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /index.html
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - name: acme-challenges
              mountPath: /var/www/.well-known/acme-challenge
      volumes:
        - name: acme-challenges
          emptyDir: {}
