k8s/prod/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emotion-backend-service
  namespace: emotion-prod
spec:
  type: ClusterIP
  selector:
    app: emotion-backend
  ports:
    - port: 8080
      targetPort: 8080
