k8s/prod/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emotion-frontend-service
  namespace: emotion-prod
  annotations:
    networking.gke.io/managed-certificates: emotion-certificate
    kubernetes.io/ingress.class: "gce"
spec:
  type: LoadBalancer
  selector:
    app: emotion-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 80
